# library-management-server

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
scripts/: run_develop.sh
