[tool.poetry]
name = "library-mgnt"
version = "0.1.0"
description = "A library management API server"
authors = ["bimal125 <pandeybi125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
